[Fix] #19517 : overflow cross and validate icon on loading

--- a/modules/_loading-list.scss
+++ b/modules/_loading-list.scss
@@ -21,11 +21,6 @@
     }
 }
 
-media-library .loading-list ul{
-    li{
-        padding-right: 35px;
-    }
-}
 .loading-list ul{
     li.removable{
         padding-right: 35px;
@@ -151,6 +146,9 @@ media-library .loading-list ul{
                     color: $accent;
                     border-color: $accent;
                     transform: scale(1.1);
+                }
+                .status-infos{
+                    margin-right:25px;
                 }
 
                 .close{
